Fix the PDF download button.

r411848 did not update the message receiving from RVH to RFH, even though
the sender changed from RV to RF.

BUG=638087

Review-Url: https://codereview.chromium.org/2246373003
Cr-Commit-Position: refs/heads/master@{#412251}

Former-commit-id: e6c1ffdccf7a7244e4b035532147757e80f1bd66